; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_gui_photon.c_gui_mch_open.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_gui_photon.c_gui_mch_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32, i32 }

@Pg_BLACK = common dso_local global i32 0, align 4
@gui = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@Pg_WHITE = common dso_local global i32 0, align 4
@gui_win_x = common dso_local global i32 0, align 4
@gui_win_y = common dso_local global i32 0, align 4
@OK = common dso_local global i32 0, align 4
@FAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gui_mch_open() #0 {
  %1 = load i32, i32* @Pg_BLACK, align 4
  store i32 %1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gui, i32 0, i32 3), align 4
  %2 = load i32, i32* @Pg_WHITE, align 4
  store i32 %2, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gui, i32 0, i32 1), align 4
  %3 = call i32 (...) @set_normal_colors()
  %4 = call i32 (...) @gui_check_colors()
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gui, i32 0, i32 3), align 4
  store i32 %5, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gui, i32 0, i32 4), align 4
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gui, i32 0, i32 1), align 4
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gui, i32 0, i32 2), align 4
  %7 = call i32 (...) @highlight_gui_started()
  %8 = load i32, i32* @gui_win_x, align 4
  %9 = icmp ne i32 %8, -1
  br i1 %9, label %10, label %17

10:                                               ; preds = %0
  %11 = load i32, i32* @gui_win_y, align 4
  %12 = icmp ne i32 %11, -1
  br i1 %12, label %13, label %17

13:                                               ; preds = %10
  %14 = load i32, i32* @gui_win_x, align 4
  %15 = load i32, i32* @gui_win_y, align 4
  %16 = call i32 @gui_mch_set_winpos(i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %13, %10, %0
  %18 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gui, i32 0, i32 0), align 4
  %19 = call i64 @PtRealizeWidget(i32 %18)
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = load i32, i32* @OK, align 4
  br label %25

23:                                               ; preds = %17
  %24 = load i32, i32* @FAIL, align 4
  br label %25

25:                                               ; preds = %23, %21
  %26 = phi i32 [ %22, %21 ], [ %24, %23 ]
  ret i32 %26
}

declare dso_local i32 @set_normal_colors(...) #1

declare dso_local i32 @gui_check_colors(...) #1

declare dso_local i32 @highlight_gui_started(...) #1

declare dso_local i32 @gui_mch_set_winpos(i32, i32) #1

declare dso_local i64 @PtRealizeWidget(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
